    metadata (year and month) when adding files.
  * Preserve metadata when staging a new version of an annexed file.
  * metadata: Field names limited to alphanumerics and a few whitelisted
    punctuation characters to avoid issues with views, etc.
  * metadata: Support --json
  * webapp: Fix creation of box.com and Amazon S3 and Glacier
    repositories, broken in 5.20140221.

 -- Joey Hess <joeyh@debian.org>  Fri, 21 Feb 2014 13:03:04 -0400

git-annex (5.20140221) unstable; urgency=medium

  * metadata: New command that can attach metadata to files.
  * --metadata can be used to limit commands to acting on files
    that have particular metadata.
  * Preferred content expressions can use metadata=field=value
    to limit them to acting on files that have particular metadata.
  * view: New command that creates and checks out a branch that provides
    a structured view of selected metadata.
  * vfilter, vadd, vpop, vcycle: New commands for operating within views.
  * pre-commit: Update metadata when committing changes to locations
    of annexed files within a view.
  * Add progress display for transfers to/from external special remotes.
  * unused: Fix to actually detect unused keys when in direct mode.
  * fsck: When run with --all or --unused, while .gitattributes
    annex.numcopies cannot be honored since it's operating on keys
    instead of files, make it honor the global numcopies setting,
    and the annex.numcopies git config setting.
  * trust, untrust, semitrust, dead: Warn when the trust level is
    overridden in .git/config.
  * glacier: Do not try to run glacier value create when an existing glacier
    remote is enabled.
  * fsck: Refuse to do anything if more than one of --incremental, --more,
    and --incremental-schedule are given, since it's not clear which option
    should win.
  * Windows webapp: Can set up box.com, Amazon S3, and rsync.net remotes
  * Windows webapp: Can create repos on removable drives.